test/errors/offsets_error/zs/logical_or_operator_error.zs
package logical_or_operator_error;

struct LogicalOrOperatorError
{
    bool offset;
offset || true:
    string field;
};
